iron/iron-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
  labels:
    db: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
      - name: mariadb
        image: kodekloud/irondb:2.0
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db
      volumes:
      - name: db
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  selector:
    db: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
